--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   <div class="wrapper">
     <div class="container">
 
-      <img class="logo" src="http://hubpress.io/img/logo.png" alt="Logo HubPress.io">
-      <h1>Hub<span>Press</span>.io</h1>
-      <p class="button">An awesome blog will be here soon!</p>
+      <img class="logo" src= # alt="Logo HubPress.io">
+      <h1>Gregsadev<span></span>.</h1>
+      <p class="button"> you ain't met a fag with this kinda money yet</p>
 
-      <a href="https://twitter.com/HubPressIO" class="twitter-follow-button" data-show-count="false">Follow @HubPressIO</a>
+      <a href="https://twitter.com/g0yobih" class="twitter-follow-button" data-show-count="false">Follow @g0yo</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
   </div>
