--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="wrapper">
     <div class="container">
 
-      <img class="logo" src="https://imgur.com/a/rABzJ8M" alt="Logo HubPress.io">
+      <img class="logo" src="/images/banner.jpg" alt="Logo HubPress.io">
       <h1>Gregsadev<span></span>.</h1>
       <p class="button"> you ain't met a fag with this kinda money yet</p>
 
