--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet' type='text/css>
 
   <style>
   body {
@@ -55,7 +56,7 @@
       
 
       <img class="logo" src="/images/banner.jpg" alt="Logo HubPress.io">
-      <h1> <p id="demo"></p></h1>
+      <h1> <p id="demo"Gregory with all the bleach></p></h1>
       <script>
       var i = 0;
 var txt = 'Lorem ipsum typing effect!'; /* The text */
