--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" rek=' stylesheet' type=text/css'>
+        
 
   <style>
   body {
@@ -48,6 +49,7 @@
     padding: 10px;
     border-radius: 10px;
   }
+  
   </style>
 </head>
 <body>
